--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -654,6 +654,7 @@ allow 195.176.3.24;
 allow 195.26.245.180;
 allow 195.47.238.176;
 allow 195.47.238.177;
+allow 195.47.238.178;
 allow 195.47.238.82;
 allow 195.47.238.83;
 allow 195.47.238.84;
@@ -872,6 +873,7 @@ allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
+allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
 allow 23.154.177.18;
@@ -1362,6 +1364,7 @@ allow 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
 allow 2a0c:5700:3133:1705:be24:11ff:fee1:73d9;
 allow 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
 allow 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
+allow 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
 allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
@@ -1549,7 +1552,6 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
-allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.172;
 allow 45.84.107.182;
