--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -128,6 +128,7 @@ allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.99.172.11;
 allow 139.99.8.57;
+allow 141.147.97.190;
 allow 141.98.11.62;
 allow 142.171.12.88;
 allow 142.44.133.81;
@@ -897,6 +898,7 @@ allow 45.95.169.130;
 allow 45.95.169.230;
 allow 45.95.169.255;
 allow 46.165.243.36;
+allow 46.182.21.248;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 5.104.86.6;
