--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -125,7 +125,6 @@ set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.99.172.11;
 set_real_ip_from 139.99.8.57;
-set_real_ip_from 141.147.97.190;
 set_real_ip_from 141.98.11.62;
 set_real_ip_from 142.171.12.88;
 set_real_ip_from 142.44.133.81;
@@ -622,6 +621,7 @@ set_real_ip_from 193.189.100.204;
 set_real_ip_from 193.189.100.205;
 set_real_ip_from 193.189.100.206;
 set_real_ip_from 193.200.16.21;
+set_real_ip_from 193.200.78.36;
 set_real_ip_from 193.218.118.133;
 set_real_ip_from 193.218.118.137;
 set_real_ip_from 193.218.118.173;
@@ -653,6 +653,7 @@ set_real_ip_from 195.176.3.24;
 set_real_ip_from 195.26.245.180;
 set_real_ip_from 195.47.238.176;
 set_real_ip_from 195.47.238.177;
+set_real_ip_from 195.47.238.178;
 set_real_ip_from 195.47.238.82;
 set_real_ip_from 195.47.238.83;
 set_real_ip_from 195.47.238.84;
@@ -817,7 +818,6 @@ set_real_ip_from 204.85.191.8;
 set_real_ip_from 204.85.191.9;
 set_real_ip_from 205.185.113.180;
 set_real_ip_from 205.185.113.8;
-set_real_ip_from 205.185.114.112;
 set_real_ip_from 205.185.116.215;
 set_real_ip_from 205.185.116.34;
 set_real_ip_from 205.185.117.149;
@@ -825,7 +825,6 @@ set_real_ip_from 205.185.119.35;
 set_real_ip_from 205.185.121.170;
 set_real_ip_from 205.185.123.93;
 set_real_ip_from 205.185.124.176;
-set_real_ip_from 205.185.124.193;
 set_real_ip_from 205.185.127.231;
 set_real_ip_from 209.141.32.181;
 set_real_ip_from 209.141.32.198;
@@ -847,7 +846,6 @@ set_real_ip_from 212.73.134.204;
 set_real_ip_from 212.95.50.77;
 set_real_ip_from 213.252.140.118;
 set_real_ip_from 213.95.149.22;
-set_real_ip_from 216.239.90.19;
 set_real_ip_from 216.73.159.101;
 set_real_ip_from 216.73.159.75;
 set_real_ip_from 217.12.221.131;
@@ -956,9 +954,7 @@ set_real_ip_from 2605:6400:10:75:1585:9b71:1c16:b1a1;
 set_real_ip_from 2605:6400:10:8a2:de49:ffd1:46f5:99a2;
 set_real_ip_from 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
 set_real_ip_from 2605:6400:10:aa1:2db8:1c14:2191:4aa8;
-set_real_ip_from 2605:6400:20:117a:2605:6400:20:117a;
 set_real_ip_from 2605:6400:20:1a8:f5f2:4a28:b5ed:931d;
-set_real_ip_from 2605:6400:20:1c01:7d33:a5db:c2b9:1092;
 set_real_ip_from 2605:6400:20:2417::69;
 set_real_ip_from 2605:6400:20:3ea:c2a3:1162:7224:e5df;
 set_real_ip_from 2605:6400:20:482:3920:1829:1839:1293;
@@ -1027,7 +1023,6 @@ set_real_ip_from 2607:5300:61:785::;
 set_real_ip_from 2607:5300:61:785:1:2:3:4;
 set_real_ip_from 2607:5501:3000:1dc::2;
 set_real_ip_from 2607:f130:0:ed:216:3cff:febd:3b42;
-set_real_ip_from 2607:f530:8002::19;
 set_real_ip_from 2620:18c:0:192::171;
 set_real_ip_from 2620:18c:0:192::172;
 set_real_ip_from 2620:18c:0:192::173;
@@ -1124,7 +1119,6 @@ set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:78fc::1;
 set_real_ip_from 2a04:52c0:105:82c0::1;
 set_real_ip_from 2a04:52c0:105:98a3::1;
-set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394::1;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1363,8 +1357,10 @@ set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fee1:73d9;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
 set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
+set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
 set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
+set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
 set_real_ip_from 2a0d:bbc7:0:1::1df;
 set_real_ip_from 2a0d:bbc7:0:1::254;
@@ -1472,6 +1468,7 @@ set_real_ip_from 2a12:a800:2:1:45:80:158:69;
 set_real_ip_from 2a13:d207:0:461::1;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
+set_real_ip_from 31.172.78.158;
 set_real_ip_from 31.220.75.237;
 set_real_ip_from 3.14.249.60;
 set_real_ip_from 35.0.127.52;
@@ -1549,7 +1546,6 @@ set_real_ip_from 45.80.158.27;
 set_real_ip_from 45.80.158.69;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
-set_real_ip_from 45.83.21.193;
 set_real_ip_from 45.84.107.101;
 set_real_ip_from 45.84.107.172;
 set_real_ip_from 45.84.107.182;
@@ -1582,14 +1578,12 @@ set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.224;
 set_real_ip_from 5.255.100.227;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.102.89;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
 set_real_ip_from 5.255.106.172;
-set_real_ip_from 5.255.109.236;
 set_real_ip_from 5.255.111.64;
 set_real_ip_from 5.255.114.171;
 set_real_ip_from 5.255.115.58;
@@ -1663,6 +1657,7 @@ set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 84.247.165.51;
 set_real_ip_from 84.247.183.128;
+set_real_ip_from 85.239.41.130;
 set_real_ip_from 85.93.218.204;
 set_real_ip_from 86.54.28.49;
 set_real_ip_from 87.118.110.27;
@@ -1724,6 +1719,7 @@ set_real_ip_from 94.142.244.16;
 set_real_ip_from 94.16.115.121;
 set_real_ip_from 94.16.116.81;
 set_real_ip_from 94.16.121.91;
+set_real_ip_from 94.177.106.54;
 set_real_ip_from 94.230.208.147;
 set_real_ip_from 94.230.208.148;
 set_real_ip_from 94.72.103.33;
