--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -124,6 +124,7 @@ allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.99.172.11;
 allow 139.99.8.57;
+allow 141.147.97.190;
 allow 141.98.11.62;
 allow 142.171.12.88;
 allow 142.44.133.81;
@@ -620,7 +621,6 @@ allow 193.189.100.203;
 allow 193.189.100.204;
 allow 193.189.100.205;
 allow 193.189.100.206;
-allow 193.200.16.21;
 allow 193.200.78.36;
 allow 193.218.118.133;
 allow 193.218.118.137;
@@ -641,6 +641,7 @@ allow 193.70.80.213;
 allow 194.15.112.133;
 allow 194.15.113.118;
 allow 194.15.115.212;
+allow 194.156.103.16;
 allow 194.163.130.99;
 allow 194.163.157.49;
 allow 194.26.192.142;
@@ -1036,6 +1037,7 @@ allow 2800:ba0:6:c1::4858;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
+allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
@@ -1417,7 +1419,6 @@ allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a0f:e586:f:f:f10e:eca5:5d0e:135b;
 allow 2a0f:e586:f:f:fca1:db52:9055:cff3;
 allow 2a10:1fc0:1::c758:3168;
-allow 2a10:1fc0:8::f626:c9c6;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
@@ -1470,7 +1471,6 @@ allow 2a12:a800:2:1:45:141:215:97;
 allow 2a12:a800:2:1:45:80:158:205;
 allow 2a12:a800:2:1:45:80:158:23;
 allow 2a12:a800:2:1:45:80:158:27;
-allow 2a12:a800:2:1:45:80:158:69;
 allow 2a13:d207:0:461::1;
 allow 31.129.22.65;
 allow 31.133.0.210;
@@ -1510,7 +1510,6 @@ allow 45.138.16.76;
 allow 45.141.215.110;
 allow 45.141.215.111;
 allow 45.141.215.114;
-allow 45.141.215.133;
 allow 45.141.215.167;
 allow 45.141.215.169;
 allow 45.141.215.17;
@@ -1549,9 +1548,9 @@ allow 45.79.144.222;
 allow 45.80.158.205;
 allow 45.80.158.23;
 allow 45.80.158.27;
-allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.172;
 allow 45.84.107.182;
@@ -1673,6 +1672,7 @@ allow 87.118.116.12;
 allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
+allow 87.120.254.132;
 allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
