--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -41,6 +41,7 @@ set_real_ip_from 107.174.231.196;
 set_real_ip_from 107.174.231.205;
 set_real_ip_from 107.174.45.53;
 set_real_ip_from 107.174.45.55;
+set_real_ip_from 107.174.83.58;
 set_real_ip_from 107.175.31.193;
 set_real_ip_from 107.189.10.175;
 set_real_ip_from 107.189.11.111;
@@ -224,6 +225,7 @@ set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.64;
 set_real_ip_from 178.218.144.96;
 set_real_ip_from 178.218.144.99;
+set_real_ip_from 178.29.128.75;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
 set_real_ip_from 179.43.159.195;
