--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -299,6 +299,7 @@ deny 2a03:4000:6:614:d803:40ff:fec3:832a;
 deny 2a03:4000:66:15:18a0:6bff:fe90:3147;
 deny 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 deny 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
+deny 2a03:6f20:531::254;
 deny 2a03:e600:100::1;
 deny 2a03:e600:100::2;
 deny 2a03:e600:100::3;
@@ -339,11 +340,7 @@ deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
 deny 2a05:541:121:33::1;
 deny 2a05:541:122:49::1;
-deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:655b::1;
-deny 2a05:b0c7:67c6::1;
-deny 2a05:b0c7:6949::1;
-deny 2a05:b0c7:6bd4::1;
 deny 2a05:b0c7:6cc4::1;
 deny 2a06:1280:bee1:2::ee12:230;
 deny 2a06:1700:0:12::1;
